[systeminfo] Add CPU frequency channels (#16012)
Signed-off-by: Mark Herwege <mark.herwege@telenet.be>