@@ -13,7 +13,6 @@
 package org.openhab.binding.systeminfo.test;
 
 import static java.lang.Thread.sleep;
-import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -23,8 +22,10 @@ import java.math.BigDecimal;
 import java.net.UnknownHostException;
 import java.util.Hashtable;
 import java.util.List;
+import java.util.Map;
 
 import javax.measure.quantity.ElectricPotential;
+import javax.measure.quantity.Frequency;
 import javax.measure.quantity.Temperature;
 import javax.measure.quantity.Time;
 
@@ -93,11 +94,13 @@ import org.openhab.core.types.UnDefType;
  * @author Lyubomir Papazov - Created a mock systeminfo object. This way, access to the user's OS will not be required,
  *         but mock data will be used instead, avoiding potential errors from the OS queries.
  * @author Wouter Born - Migrate Groovy to Java tests
+ * @author Mark Herwege - Processor frequency channels
  */
 @NonNullByDefault
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class SysteminfoOSGiTest extends JavaOSGiTest {
+
     private static final String DEFAULT_TEST_THING_NAME = "work";
     private static final String DEFAULT_TEST_ITEM_NAME = "test";
     private static final String DEFAULT_CHANNEL_TEST_PRIORITY = "High";
@@ -126,16 +129,17 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
     private @NonNullByDefault({}) ManagedThingProvider managedThingProvider;
     private @NonNullByDefault({}) ManagedItemChannelLinkProvider itemChannelLinkProvider;
     private @NonNullByDefault({}) UnitProvider unitProvider;
+    private @NonNullByDefault({}) VolatileStorageService volatileStorageService;
 
     @BeforeEach
     public void setUp() {
-        VolatileStorageService volatileStorageService = new VolatileStorageService();
+        volatileStorageService = new VolatileStorageService();
         registerService(volatileStorageService);
 
         // Preparing the mock with OS properties, that are used in the initialize method of SysteminfoHandler
         // Make this lenient because the assertInvalidThingConfigurationValuesAreHandled test does not require them
-        lenient().when(mockedSystemInfo.getCpuLogicalCores()).thenReturn(new DecimalType(2));
-        lenient().when(mockedSystemInfo.getCpuPhysicalCores()).thenReturn(new DecimalType(2));
+        lenient().when(mockedSystemInfo.getCpuLogicalCores()).thenReturn(new DecimalType(1));
+        lenient().when(mockedSystemInfo.getCpuPhysicalCores()).thenReturn(new DecimalType(1));
         lenient().when(mockedSystemInfo.getOsFamily()).thenReturn(new StringType("Mock OS"));
         lenient().when(mockedSystemInfo.getOsManufacturer()).thenReturn(new StringType("Mock OS Manufacturer"));
         lenient().when(mockedSystemInfo.getOsVersion()).thenReturn(new StringType("Mock Os Version"));
@@ -163,11 +167,6 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
             }
             systeminfoHandlerFactory.bindSystemInfo(mockedSystemInfo);
         }
-
-        waitForAssert(() -> {
-            systeminfoHandlerFactory = getService(ThingHandlerFactory.class, SysteminfoHandlerFactory.class);
-            assertThat(systeminfoHandlerFactory, is(notNullValue()));
-        });
 
         waitForAssert(() -> {
             thingRegistry = getService(ThingRegistry.class);
@@ -199,13 +198,14 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
     public void tearDown() {
         Thing thing = systeminfoThing;
         if (thing != null) {
-            // Remove the systeminfo thing. The handler will be also disposed automatically
+            // Remove the systeminfo thing. The handler will also be disposed automatically
             Thing removedThing = thingRegistry.forceRemove(thing.getUID());
             assertThat("The systeminfo thing cannot be deleted", removedThing, is(notNullValue()));
             waitForAssert(() -> {
                 ThingHandler systemInfoHandler = thing.getHandler();
                 assertThat(systemInfoHandler, is(nullValue()));
             });
+            managedThingProvider.remove(thing.getUID());
         }
 
         if (testItem != null) {
@@ -213,6 +213,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         }
 
         unregisterService(mockedSystemInfo);
+        unregisterService(volatileStorageService);
     }
 
     private void initializeThingWithChannelAndPID(String channelID, String acceptedItemType, int pid) {
@@ -275,8 +276,12 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         Channel channel = ChannelBuilder.create(channelUID, acceptedItemType).withType(channelTypeUID)
                 .withKind(ChannelKind.STATE).withConfiguration(channelConfig).build();
 
-        Thing thing = ThingBuilder.create(thingTypeUID, thingUID).withConfiguration(thingConfiguration)
-                .withChannel(channel).build();
+        ThingBuilder thingBuilder = ThingBuilder.create(thingTypeUID, thingUID).withConfiguration(thingConfiguration)
+                .withChannel(channel);
+        // Make sure the thingTypeVersion matches the highest version in the update instructions of the binding to avoid
+        // new channels being added and the thing not initializing
+        thingBuilder = thingBuilder.withProperties(Map.of("thingTypeVersion", "1"));
+        Thing thing = thingBuilder.build();
         systeminfoThing = thing;
 
         managedThingProvider.add(thing);
@@ -397,6 +402,30 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
 
         initializeThingWithChannel(channnelID, acceptedItemType);
         assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, UnDefType.UNDEF);
+    }
+
+    @Test
+    public void assertChannelCpuMaxFreq() {
+        String channnelID = SysteminfoBindingConstants.CHANNEL_CPU_MAXFREQ;
+        String acceptedItemType = "Number:Frequency";
+
+        QuantityType<Frequency> mockedCpuMaxFreqValue = new QuantityType<>(2500, Units.HERTZ);
+        when(mockedSystemInfo.getCpuMaxFreq()).thenReturn(mockedCpuMaxFreqValue);
+
+        initializeThingWithChannel(channnelID, acceptedItemType);
+        assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, mockedCpuMaxFreqValue);
+    }
+
+    @Test
+    public void assertChannelCpuFreq() {
+        String channnelID = SysteminfoBindingConstants.CHANNEL_CPU_FREQ;
+        String acceptedItemType = "Number:Frequency";
+
+        QuantityType<Frequency> mockedCpuFreqValue = new QuantityType<>(2500, Units.HERTZ);
+        when(mockedSystemInfo.getCpuFreq(0)).thenReturn(mockedCpuFreqValue);
+
+        initializeThingWithChannel(channnelID, acceptedItemType);
+        assertItemState(acceptedItemType, DEFAULT_TEST_ITEM_NAME, DEFAULT_CHANNEL_TEST_PRIORITY, mockedCpuFreqValue);
     }
 
     @Test
@@ -997,8 +1026,7 @@ public class SysteminfoOSGiTest extends JavaOSGiTest {
         }
 
         waitForAssert(() -> {
-            List<DiscoveryResult> results = inbox.stream().filter(InboxPredicates.forThingUID(computerUID))
-                    .collect(toList());
+            List<DiscoveryResult> results = inbox.stream().filter(InboxPredicates.forThingUID(computerUID)).toList();
             assertFalse(results.isEmpty(), "No Thing with UID " + computerUID.getAsString() + " in inbox");
         });
 
